Tablet - overflow fixed

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     padding: 0px;
     font-family: "Plus Jakarta Sans", sans-serif;
     font-weight: 400;
+
+}
+
+body
+{
+    overflow-x: hidden;
 }
 
 a
